fix: arregla modelos

--- a/proyecto/cartech_web/.gitignore
+++ b/proyecto/cartech_web/.gitignore
@@ -250,4 +250,5 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+*.__pychache__/
 # End of https://www.toptal.com/developers/gitignore/api/linux,macos,windows,python
