--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 ### Linux ###
 *~
 
-*cpython-311.pyc
+*.cpython-311.pyc
 
 # temporary files which can be created if a process still has a handle open of a deleted file
 .fuse_hidden*
